components/apps/wax100-blog/overlays/production/gcsfuse-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wax100-blog
spec:
  template:
    metadata:
      annotations:
        # GCS FUSE CSIドライバーのサイドカーコンテナを有効化
        gke-gcsfuse/volumes: "true"
        gke-gcsfuse/memory-limit: "100Mi"
        gke-gcsfuse/ephemeral-storage-limit: "3Gi"
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      containers:
        - name: web
          volumeMounts:
            # Production(Cloud SQL)ではSQLiteを使わないため、POSIX非互換のFUSEにdataディレクトリを作らせない
            - $patch: delete
              name: ghost-storage
              mountPath: /var/lib/ghost/content/data
      volumes:
        # PVCからGCS FUSE CSIに差し替え
        - name: ghost-storage
          persistentVolumeClaim: null
          csi:
            driver: gcsfuse.csi.storage.gke.io
            volumeAttributes:
              bucketName: wax100-blog
              mountOptions: "implicit-dirs,uid=1000,gid=1000"
