components/apps/wax100-blog/overlays/production/scheduling-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wax100-blog
spec:
  selector:
    matchLabels:
      app: wax100-blog
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-pool
                    operator: In
                    values:
                      - prod-pool
      tolerations:
        - operator: Exists
