components/apps/wax100-blog/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wax100-blog
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prod-wax100-blog-ip
    networking.gke.io/managed-certificates: prod-wax100-blog-cert
spec:
  ingressClassName: gce
  rules:
    - host: wax100.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wax100-blog
                port:
                  number: 80
